--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
 		<meta name="keywords" content="资源" />
 		<meta name="robots" content="none" />
 		<title>跳转中-菊花种植园</title>
-		<META HTTP-EQUIV="Refresh" CONTENT="0;URL=https://dioju.herokuapp.com/">
+		<!--<META HTTP-EQUIV="Refresh" CONTENT="0;URL=https://dioju.herokuapp.com/">-->
+		<META HTTP-EQUIV="Refresh" CONTENT="0;URL=https://pan.ifwlzs.workers.dev/">
+			
 	</head>
 
 	<body>
